<resources>
    <string name="app_name">PerfectMatch</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">SIGN UP</string>
    <string name="new_user">New to Perfect Match? Click Here!</string>
    <string name="applicant">Applicant</string>
    <string name="university">University</string>
    <string name="manager">Manager</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="fill_out_faculty">It is mandatory to fill out at least one faculty profile!</string>
    <string name="faculty_name">Faculty Name:</string>
    <string name="number_of_applicants">Number of Applicants:</string>
    <string name="minimal_average">Minimal Bachelor Average:</string>
    <string name="project_nature">Required Project Nature:</string>
    <string name="project_grade">Required Project Grade:</string>
    <string name="research">Research</string>
    <string name="continue_btn">Continue</string>
    <string name="putusernamehere">put username here</string>
    <string name="glad_joined">We\'re so glad you joined us!</string>
    <string name="fill_out_university">Please fill out the following info:</string>
    <string name="number_of_faculties">Number of Faculties:</string>
    <string name="next_step">Next Step!</string>
    <string name="glad_joined_applicant">We\'re so glad you joined us!</string>
    <string name="putusernamehere_2">put username here</string>
    <string name="fill_out_applicant">Please fill out the following info (first step out of three)</string>
    <string name="bachelor_average_applicant">Bachelor Average:</string>
    <string name="final_project_grade">Final Project Grade:</string>
    <string name="final_project_nature">Final Project Nature:</string>
    <string name="research_2">Research</string>
    <string name="faculty_wanted">Faculty Wanted:</string>
    <string name="next_step_2">Next Step!</string>
    <string name="submit_continue"><![CDATA[Submit & Continue]]></string>
    <string name="submit_exit"><![CDATA[Submit & Exit]]></string>
    <string name="university_name">University Name:</string>
    <string name="user_name_university">User Name:</string>
    <string name="password_university">Password:</string>
    <string name="create_a_profile_u">CREATE A PROFILE!</string>
    <string name="name">Name:</string>
    <string name="id">ID:</string>
    <string name="user_name_applicant">User Name:</string>
    <string name="password_applicant">Password:</string>
    <string name="create_my_profile_applicant">CREATE MY PROFILE!</string>
    <string name="next_calculation">Next Calculation</string>
    <string name="date">Date</string>
    <string name="universities">Universities</string>
    <string name="update">UPDATE</string>
    <string name="block">BLOCK</string>
    <string name="applicants">Applicants</string>
    <string name="block_date_applicants">Block Date Applicants</string>
    <string name="block_date_universities">Block Date Universities</string>
    <string name="run_algorithm">Run Algorithm</string>
    <string name="run">RUN</string>
    <string name="exit">EXIT</string>
    <string name="update_grades">UPDATE GRADES</string>
    <string name="course_5_grade">Course 5 Grade</string>
    <string name="course_4_grade">Course 4 Grade</string>
    <string name="course_3_grade">Course 3 Grade</string>
    <string name="update_preference_list">UPDATE PREFERENCE LIST</string>
    <string name="course_2_grade">Course 2 Grade</string>
    <string name="course_1_grade">Course 1 Grade</string>
    <string name="my_profile">My Profile</string>
    <string name="todo">TODO</string>
    <string name="faculty">Faculty</string>
    <string name="math">Math</string>
    <string name="average">Average</string>
    <string name="select_type">Please select above the kind of profile you want!</string>
    <string name="back">BACK</string>
</resources>
