<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvNameUniversity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:text="@string/putusernamehere_2" />

    <TextView
        android:id="@+id/tvGladJoined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvNameUniversity"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="42dp"
        android:text="@string/glad_joined" />

    <TextView
        android:id="@+id/tvFillOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvNameUniversity"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="69dp"
        android:text="@string/fill_out_university" />

    <TextView
        android:id="@+id/tvNumFaculties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvNameUniversity"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp"
        android:text="@string/number_of_faculties" />

    <EditText
        android:id="@+id/etNumFaculties"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="122dp"
        android:layout_toEndOf="@+id/tvNameUniversity"
        android:ems="10"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnNextStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="134dp"
        android:text="@string/next_step_2" />
</RelativeLayout>