<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvFillOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="31dp"
        android:text="@string/fill_out_faculty" />

    <TextView
        android:id="@+id/tvFacultyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="90dp"
        android:text="@string/faculty_name" />

    <TextView
        android:id="@+id/tvNumApplicants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvFacultyName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="137dp"
        android:text="@string/number_of_applicants" />

    <TextView
        android:id="@+id/tvMinAverage"
        android:layout_width="181dp"
        android:layout_height="25dp"
        android:layout_alignEnd="@+id/tvFacultyName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="-89dp"
        android:text="@string/minimal_average" />

    <EditText
        android:id="@+id/etFacultyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etNumApplicants"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFacultyName"
        android:layout_alignStart="@+id/etFacultyName"
        android:layout_marginStart="54dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etMinAverage"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNumApplicants"
        android:layout_alignEnd="@+id/etFacultyName"
        android:ems="10"
        android:inputType="number"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvProjectNature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvMinAverage"
        android:layout_alignParentTop="true"
        android:layout_marginTop="229dp"
        android:text="@string/project_nature" />

    <TextView
        android:id="@+id/tvProjectGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvMinAverage"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="216dp"
        android:text="@string/project_grade" />

    <Switch
        android:id="@+id/switchProjectNature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvProjectNature"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="70dp"
        android:text="@string/research_2" />

    <EditText
        android:id="@+id/edProjectGrade"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/continue_btn" />
</RelativeLayout>